# c-http

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/http/: body.h  core.h  request.h  response.h  results.h  server.h  utils.h  version.h
src/: body.c  body.h  http.c  http.h  http_internal.h  main.c  map.c  map.h  server.c  server_internal.h  utils.c  version.c  wyhash.h
src/map/: map.c  map.h
src/request/: request.c  request_internal.h
src/response/: response.c  response_codes.h  response_internal.h
test/: map_test.c  request_test.c  response_test.c
